[tool.poetry]
name = "tree-disk-api"
version = "0.1.0"
description = ""
authors = ["Tony <tonymeissner70@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
gunicorn = "^23.0.0"
python-multipart = "^0.0.17"
tree-disk-segmentation = "^0.1.3"
tree-disk-pith = "^0.1.5"
tree-disk-rings = "^0.5.0"
gdown = "^5.2.0"
python-dotenv = "^1.0.1"
opencv-python = "^4.11.0.86"
pillow = "^11.1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
