[project]
name = "tree-disk-api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
	{ name = "Tony", email = "tonymeissner70@gmail.com" }
]
dependencies = [
	"fastapi>=0.115.4,<0.116.0",
	"uvicorn>=0.32.0,<0.33.0",
	"gunicorn>=23.0.0,<24.0.0",
	"python-multipart>=0.0.17,<0.0.18",
	"tree-disk-segmentation>=0.2.2,<0.3.0",
	"tree-disk-pith>=0.2.1,<0.3.0",
	"tree-disk-rings>=0.6.1,<0.7.0",
	"gdown>=5.2.0,<6.0.0",
	"python-dotenv>=1.0.1,<2.0.0",
	"opencv-python>=4.11.0.86,<5.0.0",
	"pillow>=11.1.0,<12.0.0"
]

[dependency-groups]
dev = [
	"httpx>=0.27.2,<0.28.0",
	"pytest>=8.3.3,<9.0.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "pyproject.toml"]
