[project]
name = "tree-disk-evaluations"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
	{ name = "Tony", email = "tonymeissner70@gmail.com" }
]
dependencies = [
	"opencv-python>=4.11.0.86,<4.12.0.0",
	"pillow>=11.1.0,<12.0.0",
	"tree-disk-segmentation>=0.2.2,<0.3.0",
	"tree-disk-pith>=0.2.1,<0.3.0",
	"tree-disk-rings>=0.6.1,<0.7.0"
]

[dependency-groups]
dev = [
	"ipykernel>=6.29.5,<7.0.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["evaluation"]

[tool.hatch.build.targets.sdist]
include = [
	"evaluation",
	"README.md",
	"pyproject.toml"
]
