[tool.poetry]
name = "tree-disk-pith"
version = "0.2.0"
description = "A package for tree disk pith detection in images"
authors = ["Tony <tonymeissner70@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tuke307/tree-disk-analyzer"
repository = "https://github.com/tuke307/tree-disk-analyzer"
keywords = ["tree", "pith", "image processing"]
packages = [{ include = "treediskpith", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.23.0,<2.0.0"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
pillow = "^11.0.0"
scikit-image = "^0.24.0"
ultralytics = "^8.3.28"

[tool.poetry.scripts]
tree-disk-pith = "treediskpith.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
