[project]
name = "tree-disk-pith"
version = "0.2.1"
description = "A package for tree disk pith detection in images"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
	{ name = "Tony", email = "tonymeissner70@gmail.com" }
]
keywords = ["tree", "pith", "image processing"]
dependencies = [
	"numpy>=1.23.0,<2.0.0",
	"opencv-python>=4.10.0.84,<4.11.0.0",
	"pandas>=2.2.3,<3.0.0",
	"matplotlib>=3.9.2,<4.0.0",
	"scikit-learn>=1.5.2,<2.0.0",
	"pillow>=11.0.0,<12.0.0",
	"scikit-image>=0.24.0,<0.25.0",
	"ultralytics>=8.3.28,<9.0.0"
]

[project.urls]
Homepage = "https://github.com/tuke307/tree-disk-analyzer"
Repository = "https://github.com/tuke307/tree-disk-analyzer"

[project.scripts]
tree-disk-pith = "treediskpith.cli:main"

[dependency-groups]
dev = [
	"pytest>=8.3.4,<9.0.0",
	"ipykernel>=6.29.5,<7.0.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/treediskpith"]

[tool.hatch.build.targets.sdist]
include = [
	"src",
	"README.md",
	"pyproject.toml"
]
