[tool.poetry]
name = "tree-disk-rings"
version = "0.6.0"
description = "A package for tree disk rings detection in images"
authors = ["Tony <tonymeissner70@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tuke307/tree-disk-analyzer"
repository = "https://github.com/tuke307/tree-disk-analyzer"
keywords = ["tree", "rings", "image processing"]
packages = [{ include = "treediskrings", from = "src" }]

include = [
    "src/treediskrings/externals/linux-x86_64/devernay.out",
    "src/treediskrings/externals/linux-arm/devernay.out",
    "src/treediskrings/externals/macos-arm64/devernay.out",
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.23.0,<2.0.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
pillow = "^11.0.0"
scikit-image = "^0.24.0"
opencv-contrib-python-headless = "^4.10.0.84"
natsort = "^8.4.0"
glob2 = "^0.7"
shapely = "^2.0.6"
imageio = "^2.36.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
opencv-python = "^4.11.0.86"
opencv-python-headless = "^4.11.0.86"

[tool.poetry.scripts]
tree-disk-rings = "treediskrings.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
