[project]
name = "tree-disk-rings"
version = "0.6.1"
description = "A package for tree disk rings detection in images"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tony", email = "tonymeissner70@gmail.com" }
]
keywords = ["tree", "rings", "image processing"]
dependencies = [
    "numpy>=1.23.0,<2.0.0",
    "pandas>=2.2.3,<3.0.0",
    "matplotlib>=3.9.2,<4.0.0",
    "scikit-learn>=1.5.2,<2.0.0",
    "pillow>=11.0.0,<12.0.0",
    "scikit-image>=0.24.0,<0.25.0",
    "opencv-contrib-python-headless>=4.10.0.84,<4.11.0.0",
    "natsort>=8.4.0,<9.0.0",
    "glob2>=0.7,<0.8",
    "shapely>=2.0.6,<3.0.0",
    "imageio>=2.36.0,<3.0.0",
    "torch>=2.5.1,<3.0.0",
    "torchvision>=0.20.1,<0.21.0",
    "opencv-python>=4.11.0.86,<4.12.0.0",
    "opencv-python-headless>=4.11.0.86,<4.12.0.0"
]

[project.urls]
Homepage = "https://github.com/tuke307/tree-disk-analyzer"
Repository = "https://github.com/tuke307/tree-disk-analyzer"

[project.scripts]
tree-disk-rings = "treediskrings.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/treediskrings"]

[tool.hatch.build.targets.wheel.force-include]
"src/treediskrings/externals/linux-x86_64/devernay.out" = "treediskrings/externals/linux-x86_64/devernay.out"
"src/treediskrings/externals/linux-arm/devernay.out" = "treediskrings/externals/linux-arm/devernay.out"
"src/treediskrings/externals/macos-arm64/devernay.out" = "treediskrings/externals/macos-arm64/devernay.out"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "README.md",
    "pyproject.toml"
]
