[tool.poetry]
name = "tree-disk-segmentation"
version = "0.2.2"
description = "A package for tree disk segmentation in images"
authors = ["Tony <tonymeissner70@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tuke307/tree-disk-analyzer"
repository = "https://github.com/tuke307/tree-disk-analyzer"
keywords = ["tree", "segmentation", "image processing"]
packages = [{ include = "treedisksegmentation", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.23.0,<2.0.0"
opencv-python = "^4.10.0.84"
torch = "^2.5.1"
torchvision = "^0.20.1"
ultralytics = "^8.3.78"

[tool.poetry.scripts]
tree-disk-segmentation = "treedisksegmentation.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
