[project]
name = "tree-disk-segmentation"
version = "0.2.2"
description = "A package for tree disk segmentation in images"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
	{ name = "Tony", email = "tonymeissner70@gmail.com" }
]
keywords = ["tree", "segmentation", "image processing"]
dependencies = [
	"numpy>=1.23.0,<2.0.0",
	"opencv-python>=4.10.0.84,<4.11.0.0",
	"torch>=2.5.1,<3.0.0",
	"torchvision>=0.20.1,<0.21.0",
	"ultralytics>=8.3.78,<9.0.0"
]

[project.urls]
Homepage = "https://github.com/tuke307/tree-disk-analyzer"
Repository = "https://github.com/tuke307/tree-disk-analyzer"

[project.scripts]
tree-disk-segmentation = "treedisksegmentation.cli:main"

[dependency-groups]
dev = [
	"pytest>=8.3.4,<9.0.0",
	"ipykernel>=6.29.5,<7.0.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/treedisksegmentation"]

[tool.hatch.build.targets.sdist]
include = [
	"src",
	"README.md",
	"pyproject.toml"
]
